[package]
name = "dsd-player"
version = "0.1.0"
edition = "2021"
authors = ["K <kyj1145141@outlook.com>"]
description = "A modern DSD music player for Linux with PipeWire support"
license = "MIT"
repository = "https://github.com/yourusername/dsd-player"

[dependencies]
# UI
gtk4 = { version = "0.8", features = ["v4_12"] }
libadwaita = "0.6"

# Audio
pipewire = "0.8"

# Metadata
lofty = "0.19"

# Async
tokio = { version = "1.35", features = ["full"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Utils
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
once_cell = "1.19"

# DSD decoding
dsd = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3.9"

[features]
default = []
dsd-native = ["dsd"]

[[bin]]
name = "dsd-player"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
